# matpak

./: .gitignore  README.md  pyproject.toml
src/matpak/: __init__.py  errors.py  io.py  mat.py  types.py  vec.py
tests/: io_test.py  mat_test.py  test_mat_02.txt  test_mat_03.txt  test_vec_02.txt  test_vec_03.txt  vec_test.py
