[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matpak"
version = "2.0.0"
authors = [
  { name="Sajjad Anghooty", email="anghootys@gmail.com" },
]
description = "Matrix Utilization Python Package"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/anghootys/matpak"
Issues = "https://github.com/anghootys/matpak/issues"

[tool.setuptools.packages.find]
where = ["src"]